# SoundEditor

./: .gitignore  CMakeLists.txt  README.md  SoundEditor.cpp  SoundEditor.h  SoundEditor.sln  SoundEditor.vcxproj  SoundEditor.vcxproj.filters  Window.cpp  Window.h
src/: CMakeLists.txt  SoundEditor.cpp  SoundEditor.h  Window.cpp  Window.h
src/audio/: CMakeLists.txt  Player.cpp  Player.h  WAVReader.cpp  WAVReader.h
src/window/: Animator.cpp  Animator.h  Window.cpp  Window.h
src/window/panels/: Animator.cpp  Animator.h  DataPanel.cpp  DataPanel.h
